DuoTax/styles.css
/* custom properties */
:root {
    --primary-color: #74ac00; /*before: #2C8F30;*/
    --primary-counter-color: #ac0028; /* aka "red" */
    --text-color: #333;
    --background-color: #ffffff;
    --shadow-color: rgba(0, 0, 0, 0.1);
    --overlay-color: rgba(0, 0, 0, 0.3);
    --border-radius: 8px;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    margin: 0; padding: 0;
    overflow: auto;
    box-sizing: border-box;
    font-family: 'Open Sans', Arial, sans-serif;
}
body * { text-align: center; } /* percolate to child elements */

#share-button {
    position: fixed;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    cursor: pointer;
    z-index: 1000;
}
#share-button svg {
    width: 24px;
    height: 24px;
    fill: var(--primary-counter-color);
}

.game-container {
    flex: none;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height:100vh;
    padding: 0;
    overflow: hidden;
    padding: 0px;
    box-sizing: border-box;
}

.image-pair, .name-pair {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    width: 100%;
}

.name-pair { position: relative; }

.image-container {
    flex: 1 1 300px;
    margin: 4px;
    padding: 4px;
    width: calc(100% - 8px);
    max-width: 500px;
    aspect-ratio: 1/1;
    position: relative;
    box-shadow: 0 0 10px var(--shadow-color);
    border-radius: var(--border-radius);
    box-sizing: border-box;
    overflow: hidden;
    z-index: 1;
}
.image-container img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: var(--border-radius);
    pointer-events: none; /* Prevents the image from interfering with dragging */
    transition: opacity 0.3s ease;
}
.image-container img.loading {
    opacity: 0.7;
    transition: opacity 0s;    
}

#left-name-container, #right-name-container {
    width: 400px;
    margin: 4px;
    min-height: 60px;
}

.draggable, .droppable .draggable {
    background-color: var(--primary-color);
    opacity: 0.8;
    color: var(--background-color);
    padding: 10px;
    border-radius: var(--border-radius);
    width: 100%;
    box-sizing: border-box;
}
.draggable {
    cursor: grab;
    position: relative;
    z-index: 10;
    touch-action: none;
}
.droppable .draggable {
    box-shadow: 0 0 0 2px white;/*, 0 0 10px 3px rgba(255, 255, 255, 0.7);*/
    transition: box-shadow 0.3s ease;
}
.droppable {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    z-index: 10;
    width: 90%;
    pointer-events: none;
    height: 60px; /* Add a fixed height */
}
#image-container-1 .droppable { bottom: 10%; }
#image-container-2 .droppable { top: 10%; }

@keyframes dropAnimation {
    0% {
        transform: scale(1.1);
    }
    100% {
        transform: scale(1);
    }
}
.drop-animation {
    animation: dropAnimation 0.3s ease-out forwards;
}

/* for swipe on top image */
@keyframes swipeOutLeft {
    to {
        transform: rotate(-5deg) translateX(-100%);
        opacity: 0;
    }
}
.swiping-left .image-container { transition: transform 0.1s ease-out, opacity 0.1s ease-out; }
.swipe-out-left .image-container { animation: swipeOutLeft 0.5s ease-out forwards; }

#overlay {
    position: absolute;
    border-radius: var(--border-radius);
    width: 98vw;
    height: 100%;
    background-color: var(--overlay-color);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;
}
#overlay.show { opacity: 1; }
#overlay-message {
    font-size: 36px;
/*    font-size: clamp(14px, 5vw, 36px);  not sure this is functional */
    font-weight: bold;
    color: var(--background-color);
    text-shadow: 2px 2px 4px var(--shadow-color);
    padding: 20px;
}

.bottom-button {
    background-color: var(--primary-color);
    color: var(--background-color);
    font-size: 16px;
    border: none;
    padding: 15px 32px;
    border-radius: var(--border-radius);
    margin: 4px 0;
    width: 100%;
    max-width: 200px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

#home-link {
    font-size: 14px;
    color: var(--text-color);
    text-decoration: none;
}

#version-id {
    padding-top: 8px;
    font-size: 14px;
    color: var(--text-color);
}

/* for enter pair dialog */
#enter-pair-dialog {
    padding: 20px;
    border-radius: var(--border-radius);
    border: none;
    box-shadow: 0 0 10px var(--shadow-color);
    max-width: 400px;
    width: 90%;
}
#enter-pair-dialog h2 {
    color: var(--primary-color);
    margin-bottom: 20px;
}
#enter-pair-dialog form {
    display: flex;
    flex-direction: column;
    gap: 15px;
}
#enter-pair-dialog label {
    display: inline-block;
    width: 80px;
    text-align: right;
    margin-right: 10px;
    font-weight: bold;
}
#enter-pair-dialog input {
    width: calc(100% - 90px);
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
}
#enter-pair-dialog button {
    background-color: var(--primary-color);
    color: var(--background-color);
    border: none;
    padding: 10px 15px;
    border-radius: var(--border-radius);
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s ease;
}
#enter-pair-dialog button:hover {
    background-color: #5c8a00;
}
#dialog-message {
    color: var(--text-color);
    font-style: italic;
    margin-top: 10px;
}
.dialog-buttons {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;
}

